<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健康S生活</string>
    <string name="action_settings">设置</string>
    <!-- MainActivity START -->
    <string name="navi_run">跑步</string>
    <string name="navi_health_test">健康指数测试</string>
    <string name="navi_invite">约跑</string>
    <string name="navi_setting">设置</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout_tip">双击返回键退出</string>
    <!-- MainActivity END -->
    <!-- menu START -->
    <string name="music">音乐</string>
    <string name="music_control">音乐开关</string>
    <string name="history">历史记录</string>
    <string name="map">地图</string>
    <!-- menu END -->
    <!-- RunFragment START -->
    <string name="run_normal">自由跑</string>
    <string name="run_destination">地点跑</string>
    <string name="run_distance">距离跑</string>
    <string name="run_duration">跑步时长</string>
    <string name="run_running_distance">以跑路程</string>
    <string name="run_calorie_used">卡路里消耗</string>
    <string name="run_real_time_speed">实时速度</string>
    <string name="run_duration_empty">00:00:00</string>
    <string name="run_target_distance">您本次想跑</string>
    <string name="run_gps_tips">请打开GPS,否则定位不准确</string>
    <string name="run_noprovider_available_tips">无法获取位置，不能开启跑步</string>
    <string name="run_destination_destination">跑步到</string>
    <string name="run_destination_input_hint">请输入目的地名称</string>
    <string name="run_tips_distance_too_short">目标距离不超过100m，过近</string>
    <string name="run_tips_dest_empty">请设定目标地点</string>
    <!-- RunFragment END -->


    <!-- RunResultActivity START -->
    <string name="run_result_title">成就</string>
    <string name="run_result_target_header_title">本次跑步目标</string>
    <string name="run_result_data_header_title">本次跑步战况</string>
    <string name="run_result_average_speed">平均速度</string>
    <string name="run_result_target_distance">目标路程</string>
    <string name="run_result_target_destination">目标地点</string>
    <string name="run_result_success">剽悍的人生不需要解释!</string>
    <string name="run_result_fail">很遗憾您没有完成本次跑步目标……</string>
    <!-- RunResultActivity END -->

    <string name="get_loc_title">选区目的地</string>

    <!-- AcitivityTargetRun START -->
    <string name="run_target_completeness">目标完成度</string>
    <!-- AcitivityTargetRun END -->


    <!-- RunHistoryAcitivity START -->
    <string name="run_history_action_bar_title">跑步历史记录</string>
    <string name="run_history_date_all">所有</string>
    <string name="run_history_date_month">最近一月</string>
    <string name="run_history_date_week">最近一周</string>
    <string name="run_history_completeness_all">全部战况</string>
    <string name="run_history_completed">成功战况</string>
    <string name="run_history_completed_not">失败战况</string>
    <string name="run_history_pattern_all">全部方式</string>
    <string name="run_history_pattern_free">自由跑</string>
    <string name="run_history_pattern_distance">距离跑</string>
    <string name="run_history_pattern_dest">地点跑</string>
    <string name="run_history_total_distance">跑步总里程</string>
    <!-- ContextMenu START -->
    <string name="run_history_delete">删除</string>
    <!-- ContextMenuEND -->
    <!-- RunHistoryAcitivity END -->


    <!-- MyAlertDialog START -->
    <string name="alert_default_title">提示</string>
    <!-- MyAlertDialog END -->


    <!-- MusicActivity START -->
    <string name="music_action_bar_title">音乐列表</string>
    <!-- MusicActivity END -->


    <!-- HEALTH　test tab title START -->
    <string name="healt_test_tab_heart_rate">心率识别</string>
    <string name="healt_test_tab_ecg">心电图分析</string>
    <string name="title_activity_heart_rate_his">HeartRateHisActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ecg_take_pic">EcgTakePicActivity</string>

</resources>