<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/gray_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/run_duration"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small_l" />

        <TextView
           android:id="@+id/run_target_duration_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="00:00:00"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_big_s"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="2dp"
        android:background="@color/gray_bg" >

        <com.healthslife.run.widget.CircleProgressBar
            android:id="@+id/run_target_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/run_target_completeness"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small_l" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_bg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/run_running_distance"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small_l" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/gray_bg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/run_real_time_speed"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small_l" />

            <TextView
                android:id="@+id/run_target_speed_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0m/s"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big_s"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>