<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/normal_black_btn_selector"
            android:drawableLeft="@drawable/history_date"
            android:drawableRight="@drawable/drop_down_triangle_selector"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/run_history_date_all"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small_l" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/normal_black_btn_selector"
            android:drawableLeft="@drawable/history_pattern"
            android:drawableRight="@drawable/drop_down_triangle_selector"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/run_history_pattern_all"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small_l" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/normal_black_btn_selector"
            android:drawableLeft="@drawable/history_completeness"
            android:drawableRight="@drawable/drop_down_triangle_selector"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/run_history_completeness_all"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small_l" />
    </LinearLayout>

</RelativeLayout>